--- a/style.css
+++ b/style.css
@@ -2,6 +2,21 @@ html, body {
   margin: 0;
   padding: 0;
 }
-canvas {
-  display: block;
+#grad {
+  background-image: linear-gradient(to bottom right, #ff14af, #ff1439);
+}
+#grad1 {
+  height: 800px;
+  background-color: red; /* For browsers that do not support gradients */
+  background-image: linear-gradient(to bottom right, #ff14af, #ff1439); /* Standard syntax (must be last) */
+}
+#canvas-basic {
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
